--- a/public/views/merit_manager.html
+++ b/public/views/merit_manager.html
@@ -113,7 +113,7 @@
     app.controller("meritListController", function ($scope, $http) {
         $http.get('/merits').
         success(function (data) {
-            $scope.merits = data.merits.sort();
+            $scope.merits = data.merits;
         });
 
         $scope.deleteMerit = function (id) {
